
- #12223: Constify constructors and flags tables in C code. Now these
  tables will go in the readonly segment, where they belong.
  (Antonin Décimo, review by Gabriel Scherer and Xavier Leroy)

- #12234: make instrumented time calculation more thread-safe on macOS.
  (Anil Madhavapeddy, review by Daniel Bünzli and Xavier Leroy)

- #12275: caml/stack.h: more abstract macros to describe OCaml stacks and
  how to traverse them, supporting more stack layouts.
  (Xavier Leroy, review by KC Sivaramakrishnan and Fabrice Buoro)

- #12268: deliver `Out_of_memory` exception if domain creation fails
  due to memory resource exhaustion.  It was previous always a `Failure`.
  (Anil Madhavapeddy, review by David Allsopp)

### Code generation and optimizations:

- #11239: on x86-64 and RISC-V, reduce alignment of OCaml stacks from 16 to 8.
  This reduces stack usage.  It's only C stacks that require 16-alignment.
  (Xavier Leroy, review by Gabriel Scherer and Stephen Dolan)

- #12311: on POWER, 32-bit FP numbers stored in memory (e.g. in bigarrays)
  were not correctly rounded sometimes.
  (Xavier Leroy, review by Anil Madhavapeddy and Tim McGilchrist)

### Standard library:

* #10775: Half-precision floating-point elements in Bigarray.
  (Anton Yabchinskiy, review by Xavier Leroy and Nicolás Ojeda Bär)

- #12217: Add `Array.shuffle`.
  (Daniel Bünzli, review by Nicolás Ojeda Bär, David Allsopp and Alain Frisch)


### Other libraries:

- #12213: Dynlink library, improve legibility of error messages
  (Samuel Hym, review by Gabriel Scherer and Nicolás Ojeda Bär)

### Tools:

- #12147: ocamllex: Allow carriage returns at the end of line directives.
  (SeungCheol Jung, review by Nicolás Ojeda Bär)

- #12260: Fix invalid_argument on some external or module aliases in ocamlnat
  (Fabian Hemmer, review by Vincent Laviron)

- #12185: New script language for ocamltest.
  (Damien Doligez with Florian Angeletti, Sébastien Hinderer, Gabriel Scherer,