@@ -320,25 +320,25 @@ extern action *add_reductions(int stateno, action *actions);
 extern action *add_reduce(action *actions, int ruleno, int symbol);
 extern void closure (short int *nucleus, int n);
 extern void create_symbol_table (void);
-extern void default_action_error (void) Noreturn;
-extern void done (int k) Noreturn;
-extern void entry_without_type (char *s) Noreturn;
-extern void fatal (char *msg) Noreturn;
+extern CAMLnoret void default_action_error (void);
+extern CAMLnoret void done (int k);
+extern CAMLnoret void entry_without_type (char *s);
+extern CAMLnoret void fatal (char *msg);
 extern void finalize_closure (void);
 extern void free_parser (void);
 extern void free_symbol_table (void);
 extern void free_symbols (void);
-extern void illegal_character (char *c_cptr) Noreturn;
-extern void illegal_token_ref (int i, char *name) Noreturn;
+extern CAMLnoret void illegal_character (char *c_cptr);
+extern CAMLnoret void illegal_token_ref (int i, char *name);
 extern void lalr (void);
 extern void lr0 (void);
 extern void make_parser (void);
-extern void no_grammar (void) Noreturn;
-extern void no_space (void) Noreturn;
-extern void open_error (char_os *filename) Noreturn;
+extern CAMLnoret void no_grammar (void);
+extern CAMLnoret void no_space (void);
+extern CAMLnoret void open_error (char_os *filename);
 extern void output (void);
 extern void prec_redeclared (void);
-extern void polymorphic_entry_point(char *s) Noreturn;
+extern CAMLnoret void polymorphic_entry_point(char *s);
 extern void forbidden_conflicts (void);
 extern void reader (void);
 extern void reflexive_transitive_closure (unsigned int *R, int n);
@@ -346,19 +346,20 @@ extern void reprec_warning (char *s);
 extern void retyped_warning (char *s);
 extern void revalued_warning (char *s);
 extern void set_first_derives (void);
-extern void syntax_error (int st_lineno, char *st_line, char *st_cptr) Noreturn, terminal_lhs (int s_lineno) Noreturn;
-extern void terminal_start (char *s) Noreturn;
-extern void tokenized_start (char *s) Noreturn;
-extern void too_many_entries (void) Noreturn;
+extern CAMLnoret void syntax_error (int st_lineno, char *st_line, char *st_cptr);
+extern CAMLnoret void terminal_lhs (int s_lineno);
+extern CAMLnoret void terminal_start (char *s);
+extern CAMLnoret void tokenized_start (char *s);
+extern CAMLnoret void too_many_entries (void);
 extern void undefined_goal (char *s);
 extern void undefined_symbol (char *s);
-extern void unexpected_EOF (void) Noreturn;
-extern void unknown_rhs (int i) Noreturn;
-extern void unterminated_action (int a_lineno, char *a_line, char *a_cptr) Noreturn;
-extern void unterminated_comment (int c_lineno, char *c_line, char *c_cptr, char start_char) Noreturn;
-extern void unterminated_string (int s_lineno, char *s_line, char *s_cptr) Noreturn;
-extern void unterminated_text (int t_lineno, char *t_line, char *t_cptr) Noreturn;
-extern void used_reserved (char *s) Noreturn;
+extern CAMLnoret void unexpected_EOF (void);
+extern CAMLnoret void unknown_rhs (int i);
+extern CAMLnoret void unterminated_action (int a_lineno, char *a_line, char *a_cptr);
+extern CAMLnoret void unterminated_comment (int c_lineno, char *c_line, char *c_cptr, char start_char);
+extern CAMLnoret void unterminated_string (int s_lineno, char *s_line, char *s_cptr);
+extern CAMLnoret void unterminated_text (int t_lineno, char *t_line, char *t_cptr);
+extern CAMLnoret void used_reserved (char *s);
 extern void verbose (void);
 extern void write_section (char **section);
-extern void invalid_literal(int s_lineno, char *s_line, char *s_cptr) Noreturn;
+extern CAMLnoret void invalid_literal(int s_lineno, char *s_line, char *s_cptr);
